--- a/css/main.css
+++ b/css/main.css
@@ -4,15 +4,30 @@ header {
     height: 70px;
 }
 
-.title {
-    font-size: 36px;
-    padding-top: 10px;
-    text-align: center;
-}
-
 .menu {
     list-style: none;
+    display: block;
     position: absolute;
     top: 10px;
     right: 100px;
+    z-index: -1;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    height: 50px;
+}
+
+ul il {
+    float:left;
+}
+ul il a {
+    color: aliceblue;
+}
+.title {
+    font-size: 30px;
+    padding-top: 15px;
+    text-align: left;
 }
