--- a/css/main.css
+++ b/css/main.css
@@ -6,26 +6,35 @@ header {
 
 .menu {
     list-style: none;
-    display: block;
+    display: flex;
     position: absolute;
-    top: 10px;
-    right: 100px;
     z-index: -1;
 }
 
 ul {
-    margin: 0;
+    margin: auto;
     padding: 0;
+    text-align: right;
     list-style: none;
-    height: 50px;
+    height: 70px;
 }
 
-ul il {
-    float:left;
+li {
+    display: inline-flex;
 }
-ul il a {
+
+ul li a {
     color: aliceblue;
+    padding: 0 30px;
+    text-transform: uppercase;
+    text-decoration: none;
+    line-height: 10px;
 }
+
+ul li a:hover {
+    background: orange;
+}
+
 .title {
     font-size: 30px;
     padding-top: 15px;
