--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,55 @@
-h1{
-    color: darkgrey;
-    font-family: Calibri Light;
-    padding-left: 35px;
-    margin-top: 0px;
-    margin-bottom: 0px;
 
-}
-ul {
-    list-style: none; /*убираем маркеры списка*/
-    margin: 0; /*убираем отступы*/
-    padding-left: 0; /*убираем отступы*/
-    margin-top: 25px; /*делаем отступ сверху*/
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-color: darkslategrey;
+    padding: 10px;
+    /* border-radius: 7px;*/
 }
 
-a {
-    text-decoration: none; /*убираем подчеркивание текста ссылок*/
-    background: #734e62; /*добавляем фон к пункту меню*/
-    color: #fff; /*меняем цвет ссылок*/
-    padding: 10px; /*добавляем отступ*/
-    font-family: arial; /*меняем шрифт*/
-    border-radius: 15px; /*добавляем скругление*/
-    -moz-transition: all 0.3s 0.01s ease; /*делаем плавный переход*/
-    -o-transition: all 0.3s 0.01s ease;
-    -webkit-transition: all 0.3s 0.01s ease;
-}
-
-a:hover {
-    background: #893431; /*добавляем эффект при наведении*/
-}
-
-li {
-    float: left; /*Размещаем список горизонтально для реализации меню*/
-    margin-right: 15px; /*Добавляем отступ у пунктов меню*/
+.wrap-logo {
+    display: flex;
+    align-items: center;
+    padding-left: 100px;
 }
 
 header {
-    margin-top: 50px;
-    width: 100%;
-    background: #25162e;
-    height: 70px;
-    margin: 0; /*убираем отступы*/
-    padding-left: 0;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
-.title {
-    font-size: 36px;
-    padding-top: 10px;
-    text-align: center;
+header a {
+    color: darkgrey;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+
 }
-.menu{
-    list-style: none;
-    position: absolute;
-    top: 10px;
-    right: 50px;
+
+header a.logo {
+    font-size: 25px;
+    font-weight: bold;
+    padding-bottom: 20px;
+    padding-top: 10px;
+}
+
+header a:hover {
+    background-color: #25162e;
+    color: #a3c23e;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    padding-right: 100px;
+}
+
+body {
+    margin-top: 0;
+    margin-left: 0;
+    margin-bottom: 0;
+    margin-right: 0;
 }
 
