--- a/css/main.css
+++ b/css/main.css
@@ -47,12 +47,36 @@ nav {
 }
 
 body {
-    margin-top: 0;
-    margin-left: 0;
-    margin-bottom: 0;
-    margin-right: 0;
+    margin-right: 0px;
+    margin-left: 0px;
+    margin-bottom: 0px;
 }
 
 .image-align {
     text-align: center;
+}
+
+.dark_block {
+    background: rgba(155, 173, 255, 0.4);
+    width: 100%;
+    height: 550px;
+    position: absolute;
+    top: 70px;
+}
+
+.main_slide {
+    width: 50%;
+    height: 300px;
+    background: url(10583094099998.png);
+    background-size: cover;
+}
+
+.content {
+    line-height: 50px;
+    position: relative;
+    color: #020202;
+    width: 600px;
+    margin: 0 auto;
+    padding-top: 100px;
+    font-size: 60px;
 }
