--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,8 @@ header a.logo {
     font-size: 25px;
     font-weight: bold;
     padding-bottom: 20px;
-    padding-top: 10px;
+    padding-top: 15px;
+    font-family: Arial;
 }
 
 header a:hover {
@@ -44,6 +45,7 @@ nav {
     display: flex;
     align-items: center;
     padding-right: 100px;
+    font-family: Calibri;
 }
 
 body {
@@ -61,7 +63,7 @@ body {
     width: 100%;
     height: 550px;
     position: absolute;
-    top: 70px;
+    top: 75px;
 }
 
 .main_slide {
@@ -79,4 +81,5 @@ body {
     margin: 0 auto;
     padding-top: 100px;
     font-size: 60px;
+    font-family: "Comic Sans MS";
 }
