--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@ body {
     margin-right: 0px;
     margin-left: 0px;
     margin-bottom: 0px;
+    margin-top: 0;
 }
 
 .image-align {
@@ -63,7 +64,7 @@ body {
     width: 100%;
     height: 550px;
     position: absolute;
-    top: 75px;
+    top: 68px;
 }
 
 .main_slide {
