--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,9 @@ body {
     margin-bottom: 0px;
     margin-top: 0;
 }
+h3{
+    text-align: center;
+}
 
 .image-align {
     text-align: center;
@@ -83,4 +86,43 @@ body {
     padding-top: 100px;
     font-size: 60px;
     font-family: "Comic Sans MS";
+}
+
+.content_blok{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.blok1{
+     line-height: 30px;
+     color: #020202;
+     width: 15px;
+     margin: 0 auto;
+     padding-top: 10px;
+     font-size: 20px;
+     font-family: "Comic Sans MS";
+
+ }
+.blok2{
+    line-height: 20px;
+    color: #020202;
+    width: 30px;
+    margin: 0 auto;
+    padding-top: 10px;
+    font-size: 20px;
+    font-family: "Comic Sans MS";
+
+}
+.blok3{
+    line-height: 20px;
+    color: #020202;
+    width: 30px;
+    margin: 0 auto;
+    padding-top: 10px;
+    font-size: 20px;
+    font-family: "Comic Sans MS";
+
 }
