--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,15 @@ h3{
     font-family: "Comic Sans MS";
 }
 
-.blocs{
-display: inline-flex;
-}
 
+
+
+
+
+
+
+.col-3 {width: 25%;}
+[class*="col-"] {
+    float: left;
+    padding: 3%;
+}
