--- a/css/main.css
+++ b/css/main.css
@@ -88,20 +88,27 @@ h3{
     font-family: "Comic Sans MS";
 }
 
-   p {
-       margin-left: 25%;
-       padding-top: 0;
+p {
+    margin-left: 25%;
+    padding-top: 0;
+    margin-top: 0;
+    font-family: "Comic Sans MS";
+    color: darkgrey;
 }
 
-h4{
-    text-align: center;
+
+.col-3 {
+    width: 25%;
+
 }
 
-
-
-
-.col-3 {width: 25%;}
 [class*="col-"] {
     float: left;
     padding: 3%;
+}
+
+h3{
+    margin-top: 0;
+    margin-bottom: 2%;
+    font-family: "Candara Light";
 }
