--- a/css/main.css
+++ b/css/main.css
@@ -107,8 +107,17 @@ p {
     padding: 3%;
 }
 
-h3{
+h3 {
     margin-top: 0;
     margin-bottom: 2%;
     font-family: "Candara Light";
+}
+
+.colonas2 {
+    display: flex;
+    width: 200px;
+    height: 200px;
+    float: left;
+    margin: 50px 25px 25px 300px;
+    padding: 20px;
 }
