--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ h3 {
 
 .colonas2 {
     display: flex;
-    width: 200px;
+    /*width: 200px;*/
     height: 200px;
     float: left;
     margin: 50px 25px 25px 300px;
