--- a/css/main.css
+++ b/css/main.css
@@ -158,9 +158,15 @@ h3 {
 
 .colonas2 {
     display: flex;
-    /*width: 200px;*/
+    width: 100%;
     height: 100px;
     float: left;
-    margin: 50px 25px 25px 50px;
     padding: 20px;
+    padding-top: 30px;
+    background: rgba(107, 107, 107, 0.4);
+    height: 250px;
+}
+
+.images1, .images2, .images3 {
+    margin-left: 12%;
 }
