--- a/css/main.css
+++ b/css/main.css
@@ -212,3 +212,19 @@ h3 {
 }
 
 
+
+a {
+    color: #f85c37;
+    word-wrap: break-word;
+    transition: color 0.1s ease-in, background 0.1s ease-in;
+}
+
+a:hover, a:focus {
+    color: #7b7b7b;
+    text-decoration: none;
+    outline: 0;
+}
+
+a:before, a:after {
+    transition: color 0.1s ease-in, background 0.1s ease-in;
+}
