--- a/css/main.css
+++ b/css/main.css
@@ -171,11 +171,6 @@ h3 {
     margin-left: 12%;
 }
 
-
-
-
-
-
 #blue h4 {
     color: #197857;
     font-weight: 700;
@@ -229,7 +224,6 @@ a:before, a:after {
     display: inline-block;
     width: 100px;
     border: 2px solid #197857;
-
 }
 
 .row {
@@ -239,9 +233,20 @@ a:before, a:after {
 .col-lg-12 {
     background-color: #a3ffb5;
     background: rgba(7, 120, 73, 0.4);
-
 }
 
 div.row.centered {
     padding-top: 5%;
 }
+
+
+.centered {
+    text-align: center;
+}
+
+
+
+
+
+
+
